--- a/src/Montr.Messages/Montr.Messages.csproj
+++ b/src/Montr.Messages/Montr.Messages.csproj
@@ -5,11 +5,11 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="MailKit" />
-		<PackageReference Include="Markdig" />
-		<PackageReference Include="Microsoft.Extensions.Configuration" />
-		<PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" />
-		<PackageReference Include="Stubble.Core" />
+		<PackageReference Include="MailKit" Version="3.4.3" />
+		<PackageReference Include="Markdig" Version="0.30.4" />
+		<PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="7.0.0" />
+		<PackageReference Include="Stubble.Core" Version="1.10.8" />
 	</ItemGroup>
 
 	<ItemGroup>
