--- a/src/Host/Properties/launchSettings.json
+++ b/src/Host/Properties/launchSettings.json
@@ -1,12 +1,14 @@
-{
-  "$schema": "http://json.schemastore.org/launchsettings.json",
-  "profiles": {
-    "default": {
-      "commandName": "Project",
-      "applicationUrl": "https://+:5001;http://+:5002;",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    }
-  }
+﻿{
+	"$schema": "http://json.schemastore.org/launchsettings.json",
+	"profiles": {
+		"default": {
+			"commandName": "Project",
+			"launchBrowser": false,
+			"launchUrl": "",
+			"applicationUrl": "https://+:5001;http://+:5002;",
+			"environmentVariables": {
+				"ASPNETCORE_ENVIRONMENT": "Development"
+			}
+		}
+	}
 }
