--- a/src/Montr.Core/Montr.Core.csproj
+++ b/src/Montr.Core/Montr.Core.csproj
@@ -9,11 +9,11 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="linq2db" />
-		<PackageReference Include="MediatR" />
-		<PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" />
-		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" />
-		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" />
+		<PackageReference Include="linq2db" Version="3.7.0" />
+		<PackageReference Include="MediatR" Version="11.1.0" />
+		<PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="7.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
