--- a/src/Montr.Idx.Auth.Google/Montr.Idx.Auth.Google.csproj
+++ b/src/Montr.Idx.Auth.Google/Montr.Idx.Auth.Google.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
