--- a/src/Montr.Idx.Tests/Montr.Idx.Tests.csproj
+++ b/src/Montr.Idx.Tests/Montr.Idx.Tests.csproj
@@ -5,11 +5,11 @@
   </PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="linq2db.Identity" />
-		<PackageReference Include="Microsoft.NET.Test.Sdk" />
-		<PackageReference Include="Moq" />
-		<PackageReference Include="Npgsql" />
-		<PackageReference Include="NUnit" />
+		<PackageReference Include="linq2db.Identity" Version="3.3.0" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.0" />
+		<PackageReference Include="Moq" Version="4.18.3" />
+		<PackageReference Include="Npgsql" Version="6.0.7" />
+		<PackageReference Include="NUnit" Version="3.13.3" />
 	</ItemGroup>
 
   <ItemGroup>
