--- a/src/Montr.MasterData.Plugin.GovRu.Tests/Montr.MasterData.Plugin.GovRu.Tests.csproj
+++ b/src/Montr.MasterData.Plugin.GovRu.Tests/Montr.MasterData.Plugin.GovRu.Tests.csproj
@@ -11,9 +11,9 @@
   </ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.NET.Test.Sdk" />
-		<PackageReference Include="Npgsql" />
-		<PackageReference Include="NUnit" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.0" />
+		<PackageReference Include="Npgsql" Version="6.0.7" />
+		<PackageReference Include="NUnit" Version="3.13.3" />
 	</ItemGroup>
 
 	<ItemGroup>
