--- a/src/Montr.MasterData.Plugin.GovRu/Montr.MasterData.Plugin.GovRu.csproj
+++ b/src/Montr.MasterData.Plugin.GovRu/Montr.MasterData.Plugin.GovRu.csproj
@@ -5,8 +5,8 @@
   </PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="LumenWorksCsvReader" />
-		<PackageReference Include="System.Text.Encoding.CodePages" />
+		<PackageReference Include="LumenWorksCsvReader" Version="4.0.0" />
+		<PackageReference Include="System.Text.Encoding.CodePages" Version="7.0.0" />
 	</ItemGroup>
 
   <ItemGroup>
