--- a/src/Montr.Metadata.Tests/Montr.Metadata.Tests.csproj
+++ b/src/Montr.Metadata.Tests/Montr.Metadata.Tests.csproj
@@ -5,9 +5,9 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.NET.Test.Sdk" />
-		<PackageReference Include="Moq" />
-		<PackageReference Include="NUnit"  />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.0" />
+		<PackageReference Include="Moq" Version="4.18.3" />
+		<PackageReference Include="NUnit" Version="3.13.3" />
 	</ItemGroup>
 
 	<ItemGroup>
