--- a/src/Montr.Metadata/Montr.Metadata.csproj
+++ b/src/Montr.Metadata/Montr.Metadata.csproj
@@ -9,9 +9,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="MediatR" />
-		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" />
-		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" />
+		<PackageReference Include="MediatR" Version="11.1.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="7.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
