--- a/src/Montr.Tendr/Montr.Tendr.csproj
+++ b/src/Montr.Tendr/Montr.Tendr.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MediatR" />
+    <PackageReference Include="MediatR" Version="11.1.0" />
   </ItemGroup>
 
   <ItemGroup>
