--- a/src/Montr.Worker.Hangfire/Montr.Worker.Hangfire.csproj
+++ b/src/Montr.Worker.Hangfire/Montr.Worker.Hangfire.csproj
@@ -5,9 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Hangfire.AspNetCore" />
-    <PackageReference Include="HangFire.Core" />
-    <PackageReference Include="Hangfire.PostgreSql" />
+    <PackageReference Include="Hangfire.AspNetCore" Version="1.7.32" />
+    <PackageReference Include="HangFire.Core" Version="1.7.32" />
+    <PackageReference Include="Hangfire.PostgreSql" Version="1.9.9" />
   </ItemGroup>
 
   <ItemGroup>
