--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -24,7 +24,7 @@
 		"i18next": "^22.1.4",
 		"i18next-browser-languagedetector": "^7.0.1",
 		"i18next-xhr-backend": "^3.2.2",
-		"oidc-client": "^1.11.5",
+		"oidc-client-ts": "^2.2.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-i18next": "^12.1.1",
