--- a/src/Montr.Idx/Montr.Idx.csproj
+++ b/src/Montr.Idx/Montr.Idx.csproj
@@ -8,7 +8,7 @@
 		<PackageReference Include="linq2db" Version="3.7.0" />
 		<PackageReference Include="linq2db.Identity" Version="3.3.0" />
 		<PackageReference Include="MediatR" Version="11.1.0" />
-		<PackageReference Include="OpenIddict.AspNetCore" Version="3.1.1" />
+		<PackageReference Include="OpenIddict.AspNetCore" Version="4.0.0-rc1.22607.41" />
 		<PackageReference Include="OpenIddict.EntityFrameworkCore" Version="3.1.1" />
 		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.7" />
 	</ItemGroup>
