--- a/src/Directory.packages.props
+++ b/src/Directory.packages.props
@@ -1,6 +1,6 @@
 ﻿<Project>
 	<PropertyGroup>
-		<ManagePackageVersionsCentrally>false</ManagePackageVersionsCentrally>
+		<ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageVersion Include="linq2db" Version="3.7.0" />
