--- a/src/Montr.Worker.Hangfire.Tests/Montr.Worker.Hangfire.Tests.csproj
+++ b/src/Montr.Worker.Hangfire.Tests/Montr.Worker.Hangfire.Tests.csproj
@@ -5,8 +5,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.0" />
-        <PackageReference Include="NUnit" Version="3.13.3" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" />
+        <PackageReference Include="NUnit" />
     </ItemGroup>
 
     <ItemGroup>
