--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,16 +1,17 @@
 name: Build
 
+on: [ push, pull_request, repository_dispatch ]
+
 env:
   ConnectionStrings:Default: Server=localhost;Port=5432;Database=host;User Id=postgres;Password=secret;
   DOTNET_NOLOGO: true
   DOTNET_CLI_TELEMETRY_OPTOUT: true
   DOTNET_MULTILEVEL_LOOKUP: false
-
-on: [ push, repository_dispatch ]
+  DOTNET_SDK_VERSION: 7.0.x
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+  
     permissions:
       actions: read
       contents: read
@@ -18,8 +19,13 @@ jobs:
 
     strategy:
       fail-fast: false
+      matrix:
+        configuration: [ Debug ]
+        os: [ macos-latest, ubuntu-latest, windows-latest ]
       # matrix:
       #   language: [ 'csharp', 'typescript', 'javascript' ]
+
+    runs-on: ${{ matrix.os }}
 
     services:
       db:
@@ -34,11 +40,16 @@ jobs:
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3.1.0
 
-      - uses: actions/setup-dotnet@v3
+      - name: Setup dotnet
+        uses: actions/setup-dotnet@v3.0.3
         with:
           dotnet-version: '7.x'
+
+      - name: Verify .NET Core
+        run: dotnet --info
 
       # Initializes the CodeQL tools for scanning.
       # - name: Initialize CodeQL
@@ -46,25 +57,28 @@ jobs:
       #   with:
       #     languages: ${{ matrix.language }}
 
-      - run: dotnet build ./src/Montr.sln
+      - name: Build ${{ matrix.configuration }} solution
+        run: dotnet build ./src/Montr.sln -c "${{ matrix.configuration }}" --nologo
 
       # - name: Perform CodeQL Analysis
       #   uses: github/codeql-action/analyze@v2
 
-      - run: dotnet test ./src/Montr.Core.Tests
-      - run: dotnet test ./src/Montr.Automate.Tests
-      - run: dotnet test ./src/Montr.Metadata.Tests
-      - run: dotnet test ./src/Montr.Idx.Tests
-      - run: dotnet test ./src/Montr.MasterData.Tests
-      - run: dotnet test ./src/Montr.MasterData.Plugin.GovRu.Tests
-      - run: dotnet test ./src/Montr.Kompany.Tests
-      - run: dotnet test ./src/Montr.Settings.Tests
-      #- run: dotnet test ./src/Montr.Tendr.Tests
-      - run: dotnet test ./src/Montr.Worker.Hangfire.Tests
+      - name: Run ${{ matrix.configuration }} tests
+        run: dotnet test ./src/Montr.Core.Tests -c "${{ matrix.configuration }}" --nologo
+        run: dotnet test ./src/Montr.Automate.Tests -c "${{ matrix.configuration }}" --nologo
+        run: dotnet test ./src/Montr.Metadata.Tests -c "${{ matrix.configuration }}" --nologo
+        run: dotnet test ./src/Montr.Idx.Tests -c "${{ matrix.configuration }}" --nologo
+        run: dotnet test ./src/Montr.MasterData.Tests -c "${{ matrix.configuration }}" --nologo
+        run: dotnet test ./src/Montr.MasterData.Plugin.GovRu.Tests -c "${{ matrix.configuration }}" --nologo
+        run: dotnet test ./src/Montr.Kompany.Tests -c "${{ matrix.configuration }}" --nologo
+        run: dotnet test ./src/Montr.Settings.Tests -c "${{ matrix.configuration }}" --nologo
+        # run: dotnet test ./src/Montr.Tendr.Tests -c "${{ matrix.configuration }}" --nologo
+        run: dotnet test ./src/Montr.Worker.Hangfire.Tests -c "${{ matrix.configuration }}" --nologo
 
-      - uses: actions/setup-node@v3
+      - name: Setup node
+        uses: actions/setup-node@v3.5.1
         with:
-          node-version: '16.x'
+          node-version: 16
 
       - run: |
           npm ci
