--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -70,14 +70,14 @@ jobs:
       # - name: Perform CodeQL Analysis
       #   uses: github/codeql-action/analyze@v2
 
-      - run: dotnet test ./src/Montr.Core.Tests -c "${{ matrix.configuration }}"
-      - run: dotnet test ./src/Montr.Automate.Tests -c "${{ matrix.configuration }}"
-      - run: dotnet test ./src/Montr.Metadata.Tests -c "${{ matrix.configuration }}"
-      - run: dotnet test ./src/Montr.Idx.Tests -c "${{ matrix.configuration }}"
-      - run: dotnet test ./src/Montr.MasterData.Tests -c "${{ matrix.configuration }}"
-      - run: dotnet test ./src/Montr.MasterData.Plugin.GovRu.Tests -c "${{ matrix.configuration }}"
-      - run: dotnet test ./src/Montr.Kompany.Tests -c "${{ matrix.configuration }}"
-      - run: dotnet test ./src/Montr.Settings.Tests -c "${{ matrix.configuration }}"
+      - run: dotnet test --no-build ./src/Montr.Core.Tests -c "${{ matrix.configuration }}"
+      - run: dotnet test --no-build ./src/Montr.Automate.Tests -c "${{ matrix.configuration }}"
+      - run: dotnet test --no-build ./src/Montr.Metadata.Tests -c "${{ matrix.configuration }}"
+      - run: dotnet test --no-build ./src/Montr.Idx.Tests -c "${{ matrix.configuration }}"
+      - run: dotnet test --no-build ./src/Montr.MasterData.Tests -c "${{ matrix.configuration }}"
+      - run: dotnet test --no-build ./src/Montr.MasterData.Plugin.GovRu.Tests -c "${{ matrix.configuration }}"
+      - run: dotnet test --no-build ./src/Montr.Kompany.Tests -c "${{ matrix.configuration }}"
+      - run: dotnet test --no-build ./src/Montr.Settings.Tests -c "${{ matrix.configuration }}"
       # - run: dotnet test ./src/Montr.Tendr.Tests -c "${{ matrix.configuration }}"
       - run: dotnet test ./src/Montr.Worker.Hangfire.Tests -c "${{ matrix.configuration }}"
 
