--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,6 @@ env:
   DOTNET_NOLOGO: true
   DOTNET_CLI_TELEMETRY_OPTOUT: true
   DOTNET_MULTILEVEL_LOOKUP: false
-  DOTNET_SDK_VERSION: 7.0.x
 
 jobs:
   build:
@@ -40,16 +39,13 @@ jobs:
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3.1.0
+      - uses: actions/checkout@v3.1.0
 
-      - name: Setup dotnet
-        uses: actions/setup-dotnet@v3.0.3
+      - uses: actions/setup-dotnet@v3.0.3
         with:
           dotnet-version: '7.x'
 
-      - name: Verify dotnet
-        run: dotnet --info
+      - run: dotnet --info
 
       # Initializes the CodeQL tools for scanning.
       # - name: Initialize CodeQL
@@ -57,27 +53,19 @@ jobs:
       #   with:
       #     languages: ${{ matrix.language }}
 
-      - uses: nuget/setup-nuget@v1.1.1
-
-      - name: Restore packages
-        working-directory: ./src
-        run: dotnet restore
-
-      - name: Build solution in ${{ matrix.configuration }}
-        working-directory: ./src
-        run: dotnet build --no-restore --configuration "${{ matrix.configuration }}"
+      - run: dotnet build ./src/Montr.sln --configuration "${{ matrix.configuration }}"
 
       # - name: Perform CodeQL Analysis
       #   uses: github/codeql-action/analyze@v2
 
-      - run: dotnet test --no-build ./src/Montr.Core.Tests -c "${{ matrix.configuration }}"
-      - run: dotnet test --no-build ./src/Montr.Automate.Tests -c "${{ matrix.configuration }}"
-      - run: dotnet test --no-build ./src/Montr.Metadata.Tests -c "${{ matrix.configuration }}"
-      - run: dotnet test --no-build ./src/Montr.Idx.Tests -c "${{ matrix.configuration }}"
-      - run: dotnet test --no-build ./src/Montr.MasterData.Tests -c "${{ matrix.configuration }}"
-      - run: dotnet test --no-build ./src/Montr.MasterData.Plugin.GovRu.Tests -c "${{ matrix.configuration }}"
-      - run: dotnet test --no-build ./src/Montr.Kompany.Tests -c "${{ matrix.configuration }}"
-      - run: dotnet test --no-build ./src/Montr.Settings.Tests -c "${{ matrix.configuration }}"
+      - run: dotnet test ./src/Montr.Core.Tests -c "${{ matrix.configuration }}"
+      - run: dotnet test ./src/Montr.Automate.Tests -c "${{ matrix.configuration }}"
+      - run: dotnet test ./src/Montr.Metadata.Tests -c "${{ matrix.configuration }}"
+      - run: dotnet test ./src/Montr.Idx.Tests -c "${{ matrix.configuration }}"
+      - run: dotnet test ./src/Montr.MasterData.Tests -c "${{ matrix.configuration }}"
+      - run: dotnet test ./src/Montr.MasterData.Plugin.GovRu.Tests -c "${{ matrix.configuration }}"
+      - run: dotnet test ./src/Montr.Kompany.Tests -c "${{ matrix.configuration }}"
+      - run: dotnet test ./src/Montr.Settings.Tests -c "${{ matrix.configuration }}"
       # - run: dotnet test ./src/Montr.Tendr.Tests -c "${{ matrix.configuration }}"
       - run: dotnet test ./src/Montr.Worker.Hangfire.Tests -c "${{ matrix.configuration }}"
 
