fixed test projects run in CI

--- a/src/Montr.Automate.Tests/Montr.Automate.Tests.csproj
+++ b/src/Montr.Automate.Tests/Montr.Automate.Tests.csproj
@@ -14,6 +14,7 @@
 		<PackageReference Include="Npgsql" />
 		<PackageReference Include="Moq" />
 		<PackageReference Include="NUnit" />
+		<PackageReference Include="NUnit3TestAdapter" />
 	</ItemGroup>
 
 	<ItemGroup>
