--- a/src/Montr.Idx.Tests/Montr.Idx.Tests.csproj
+++ b/src/Montr.Idx.Tests/Montr.Idx.Tests.csproj
@@ -10,6 +10,7 @@
 		<PackageReference Include="Moq" />
 		<PackageReference Include="Npgsql" />
 		<PackageReference Include="NUnit" />
+		<PackageReference Include="NUnit3TestAdapter" />
 	</ItemGroup>
 
   <ItemGroup>
