--- a/src/Montr.MasterData.Plugin.GovRu.Tests/Montr.MasterData.Plugin.GovRu.Tests.csproj
+++ b/src/Montr.MasterData.Plugin.GovRu.Tests/Montr.MasterData.Plugin.GovRu.Tests.csproj
@@ -14,6 +14,7 @@
 		<PackageReference Include="Microsoft.NET.Test.Sdk" />
 		<PackageReference Include="Npgsql" />
 		<PackageReference Include="NUnit" />
+		<PackageReference Include="NUnit3TestAdapter" />
 	</ItemGroup>
 
 	<ItemGroup>
