--- a/src/Montr.MasterData.Tests/Montr.MasterData.Tests.csproj
+++ b/src/Montr.MasterData.Tests/Montr.MasterData.Tests.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Moq" />
     <PackageReference Include="Npgsql" />
     <PackageReference Include="NUnit" />
+    <PackageReference Include="NUnit3TestAdapter" />
   </ItemGroup>
 
   <ItemGroup>
