--- a/src/Montr.Metadata.Tests/Montr.Metadata.Tests.csproj
+++ b/src/Montr.Metadata.Tests/Montr.Metadata.Tests.csproj
@@ -7,7 +7,8 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.NET.Test.Sdk" />
 		<PackageReference Include="Moq" />
-		<PackageReference Include="NUnit"  />
+		<PackageReference Include="NUnit" />
+		<PackageReference Include="NUnit3TestAdapter" />
 	</ItemGroup>
 
 	<ItemGroup>
