--- a/src/Montr.Settings.Tests/Montr.Settings.Tests.csproj
+++ b/src/Montr.Settings.Tests/Montr.Settings.Tests.csproj
@@ -9,6 +9,7 @@
 		<PackageReference Include="Npgsql" />
 		<PackageReference Include="Moq" />
 		<PackageReference Include="NUnit" />
+		<PackageReference Include="NUnit3TestAdapter" />
 	</ItemGroup>
 
 	<ItemGroup>
