--- a/src/Montr.Tasks.Tests/Montr.Tasks.Tests.csproj
+++ b/src/Montr.Tasks.Tests/Montr.Tasks.Tests.csproj
@@ -11,6 +11,7 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.NET.Test.Sdk" />
+      <PackageReference Include="NUnit3TestAdapter" />
     </ItemGroup>
 
 </Project>
