--- a/src/Montr.Tendr.Tests/Montr.Tendr.Tests.csproj
+++ b/src/Montr.Tendr.Tests/Montr.Tendr.Tests.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="Npgsql" />
     <PackageReference Include="NUnit" />
+    <PackageReference Include="NUnit3TestAdapter" />
   </ItemGroup>
 
   <ItemGroup>
