--- a/src/Montr.Worker.Hangfire.Tests/Montr.Worker.Hangfire.Tests.csproj
+++ b/src/Montr.Worker.Hangfire.Tests/Montr.Worker.Hangfire.Tests.csproj
@@ -7,6 +7,7 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.NET.Test.Sdk" />
         <PackageReference Include="NUnit" />
+        <PackageReference Include="NUnit3TestAdapter" />
     </ItemGroup>
 
     <ItemGroup>
