--- a/src/Montr.Migration.Tests/Montr.Migration.Tests.csproj
+++ b/src/Montr.Migration.Tests/Montr.Migration.Tests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFramework>net7.0</TargetFramework>
@@ -13,7 +13,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\Montr.Core\Montr.Core.csproj" />
+	  <ProjectReference Include="..\Montr.Core\Montr.Core.csproj" />
 	</ItemGroup>
 
 </Project>
