--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -8,8 +8,8 @@
     <PackageVersion Include="MediatR" Version="11.1.0" />
     <PackageVersion Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageVersion Include="NUnit3TestAdapter" Version="4.3.1" />
-    <PackageVersion Include="OpenIddict.AspNetCore" Version="4.0.0-rc2.22614.58" />
-    <PackageVersion Include="OpenIddict.EntityFrameworkCore" Version="4.0.0-rc2.22614.58" />
+    <PackageVersion Include="OpenIddict.AspNetCore" Version="4.0.0" />
+    <PackageVersion Include="OpenIddict.EntityFrameworkCore" Version="4.0.0" />
     <PackageVersion Include="IdentityModel" Version="6.0.0" />
     <PackageVersion Include="MailKit" Version="3.4.3" />
     <PackageVersion Include="Markdig" Version="0.30.4" />
@@ -20,8 +20,8 @@
     <PackageVersion Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.1" />
     <PackageVersion Include="Moq" Version="4.18.3" />
     <PackageVersion Include="NUnit" Version="3.13.3" />
-    <PackageVersion Include="Sentry" Version="3.24.1" />
-    <PackageVersion Include="Sentry.AspNetCore" Version="3.24.1" />
+    <PackageVersion Include="Sentry" Version="3.25.0" />
+    <PackageVersion Include="Sentry.AspNetCore" Version="3.25.0" />
     <PackageVersion Include="Serilog" Version="2.12.0" />
     <PackageVersion Include="Serilog.AspNetCore" Version="6.1.0" />
     <PackageVersion Include="Serilog.Enrichers.Environment" Version="2.2.0" />
