--- a/src/Montr.Tasks.Tests/Montr.Tasks.Tests.csproj
+++ b/src/Montr.Tasks.Tests/Montr.Tasks.Tests.csproj
@@ -6,6 +6,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Montr.Kompany.Tests\Montr.Kompany.Tests.csproj" />
+      <ProjectReference Include="..\Montr.MasterData.Tests\Montr.MasterData.Tests.csproj" />
       <ProjectReference Include="..\Montr.Tasks\Montr.Tasks.csproj" />
     </ItemGroup>
 
