--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -6,6 +6,7 @@
     <PackageVersion Include="linq2db" Version="5.3.2" />
     <PackageVersion Include="linq2db.Identity" Version="3.5.0" />
     <PackageVersion Include="MediatR" Version="12.2.0" />
+    <PackageVersion Include="NUnit.Analyzers" Version="3.10.0" />
     <PackageVersion Include="NUnit3TestAdapter" Version="4.5.0" />
     <PackageVersion Include="OpenIddict.AspNetCore" Version="4.10.1" />
     <PackageVersion Include="OpenIddict.EntityFrameworkCore" Version="4.10.1" />
@@ -18,7 +19,7 @@
     <PackageVersion Include="Npgsql" Version="8.0.0" />
     <PackageVersion Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0" />
     <PackageVersion Include="Moq" Version="4.20.70" />
-    <PackageVersion Include="NUnit" Version="3.13.3" />
+    <PackageVersion Include="NUnit" Version="4.0.1" />
     <PackageVersion Include="Sentry" Version="3.41.3" />
     <PackageVersion Include="Sentry.AspNetCore" Version="3.41.3" />
     <PackageVersion Include="Serilog" Version="3.1.1" />
