--- a/src/Montr.Settings.Tests/Montr.Settings.Tests.csproj
+++ b/src/Montr.Settings.Tests/Montr.Settings.Tests.csproj
@@ -9,6 +9,10 @@
 		<PackageReference Include="Npgsql" />
 		<PackageReference Include="Moq" />
 		<PackageReference Include="NUnit" />
+		<PackageReference Include="NUnit.Analyzers">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 		<PackageReference Include="NUnit3TestAdapter" />
 	</ItemGroup>
 
