--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -6,7 +6,10 @@
     <PackageVersion Include="linq2db" Version="5.3.2" />
     <PackageVersion Include="linq2db.Identity" Version="3.5.0" />
     <PackageVersion Include="MediatR" Version="12.2.0" />
-    <PackageVersion Include="NUnit.Analyzers" Version="3.10.0" />
+    <PackageVersion Include="NUnit.Analyzers" Version="4.0.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageVersion>
     <PackageVersion Include="NUnit3TestAdapter" Version="4.5.0" />
     <PackageVersion Include="OpenIddict.AspNetCore" Version="4.10.1" />
     <PackageVersion Include="OpenIddict.EntityFrameworkCore" Version="4.10.1" />
@@ -20,16 +23,16 @@
     <PackageVersion Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0" />
     <PackageVersion Include="Moq" Version="4.20.70" />
     <PackageVersion Include="NUnit" Version="4.0.1" />
-    <PackageVersion Include="Sentry" Version="3.41.3" />
-    <PackageVersion Include="Sentry.AspNetCore" Version="3.41.3" />
+    <PackageVersion Include="Sentry" Version="4.0.0" />
+    <PackageVersion Include="Sentry.AspNetCore" Version="4.0.0" />
     <PackageVersion Include="Serilog" Version="3.1.1" />
     <PackageVersion Include="Serilog.AspNetCore" Version="8.0.1" />
     <PackageVersion Include="Serilog.Enrichers.Environment" Version="2.3.0" />
     <PackageVersion Include="Serilog.Enrichers.Thread" Version="3.1.0" />
     <PackageVersion Include="Serilog.Sinks.Console" Version="5.0.1" />
     <PackageVersion Include="Serilog.Sinks.File" Version="5.0.0" />
-    <PackageVersion Include="Hangfire.AspNetCore" Version="1.8.7" />
-    <PackageVersion Include="HangFire.Core" Version="1.8.7" />
+    <PackageVersion Include="Hangfire.AspNetCore" Version="1.8.9" />
+    <PackageVersion Include="HangFire.Core" Version="1.8.9" />
     <PackageVersion Include="Hangfire.PostgreSql" Version="1.20.5" />
     <PackageVersion Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.1" />
     <PackageVersion Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
