--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -14,39 +14,39 @@
 	"license": "AGPL-3.0",
 	"private": true,
 	"dependencies": {
-		"@ant-design/pro-components": "^2.7.1",
+		"@ant-design/pro-components": "^2.7.9",
 		"@emotion/babel-preset-css-prop": "^11.11.0",
 		"@emotion/react": "^11.11.4",
 		"ansi-regex": ">=5.0.1",
-		"antd": "^5.16.2",
-		"axios": "^1.6.8",
-		"dayjs": "^1.11.10",
-		"i18next": "^23.11.2",
-		"i18next-browser-languagedetector": "^7.2.1",
+		"antd": "^5.18.0",
+		"axios": "1.7",
+		"dayjs": "1.11",
+		"i18next": "^23.11.5",
+		"i18next-browser-languagedetector": "^8.0.0",
 		"i18next-xhr-backend": "^3.2.2",
 		"oidc-client-ts": "^3.0.1",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"react-i18next": "^14.1.0",
-		"react-router-dom": "^6.22.3",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"react-i18next": "^14.1.2",
+		"react-router-dom": "^6.23.1",
 		"universal-cookie": "^7.1.4"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.24.4",
-		"@babel/plugin-transform-runtime": "^7.24.3",
-		"@babel/preset-env": "^7.24.4",
-		"@babel/preset-react": "^7.24.1",
-		"@babel/preset-typescript": "^7.24.1",
-		"@types/react": "^18.2.79",
-		"@types/react-dom": "^18.2.25",
+		"@babel/core": "^7.24.6",
+		"@babel/plugin-transform-runtime": "^7.24.6",
+		"@babel/preset-env": "^7.24.6",
+		"@babel/preset-react": "^7.24.6",
+		"@babel/preset-typescript": "^7.24.6",
+		"@types/react": "^18.3.3",
+		"@types/react-dom": "^18.3.0",
 		"@types/react-router": "^5.1.20",
 		"@types/react-router-dom": "^5.3.3",
-		"@typescript-eslint/eslint-plugin": "^7.7.0",
-		"@typescript-eslint/parser": "^7.7.0",
+		"@typescript-eslint/eslint-plugin": "^7.12.0",
+		"@typescript-eslint/parser": "^7.12.0",
 		"babel-loader": "^9.1.3",
 		"copy-webpack-plugin": "^12.0.2",
-		"css-loader": "^7.1.1",
-		"eslint": "^8.56.0",
+		"css-loader": "^7.1.2",
+		"eslint": "^9.4.0",
 		"fork-ts-checker-webpack-plugin": "^9.0.2",
 		"kind-of": ">=6.0.3",
 		"less": "^4.2.0",
